--- a/.github/workflows/ci-release.yaml
+++ b/.github/workflows/ci-release.yaml
@@ -108,7 +108,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
 
       - name: Discord notify (success)
-        if: ${{ success() }}
+        if: ${{ success() && secrets.DISCORD_WEBHOOK != '' }}
         uses: Ilshidur/action-discord@0.3.2
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
@@ -123,7 +123,7 @@ jobs:
             • Run: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
 
       - name: Discord notify (failure)
-        if: ${{ failure() }}
+        if: ${{ failure() && secrets.DISCORD_WEBHOOK != '' }}
         uses: Ilshidur/action-discord@0.3.2
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
