--- a/.github/workflows/ci-release.yaml
+++ b/.github/workflows/ci-release.yaml
@@ -7,9 +7,13 @@ on:
         description: Whether Docker Hub credentials are configured
         required: true
         type: string
+    outputs:
+      release_url:
+        description: URL of the GitHub release (may be empty on failure)
+        value: ${{ jobs.release.outputs.release_url }}
 
 env:
-  APP_NAME: expressor
+  APP_NAME: expresso
   MAIN_CLASS: com.diezam04.expresso.adapters.cli.Cli
   VERSION: 3.2
 
@@ -20,6 +24,8 @@ permissions:
 jobs:
   release:
     runs-on: ubuntu-latest
+    outputs:
+      release_url: ${{ steps.gh_release.outputs.html_url }}
     steps:
       - uses: actions/checkout@v4
 
@@ -106,34 +112,6 @@ jobs:
             artifacts/exe/*.exe
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-
-      - name: Discord notify (success)
-        if: ${{ success() }}
-        uses: Ilshidur/action-discord@0.3.2
-        env:
-          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-        with:
-          args: |
-            ✅ **Release created**
-            • App: **${{ env.APP_NAME }}** v${{ env.VERSION }}
-            • Tag: `${{ github.ref_name }}`
-            • Author: ${{ github.actor }}
-            • Commit: `${{ github.sha }}`
-            • Release: ${{ steps.gh_release.outputs.html_url }}
-            • Run: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
-
-      - name: Discord notify (failure)
-        if: ${{ failure() }}
-        uses: Ilshidur/action-discord@0.3.2
-        env:
-          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-        with:
-          args: |
-            ❌ **Release failed**
-            • App: **${{ env.APP_NAME }}** v${{ env.VERSION }}
-            • Ref: `${{ github.ref_name }}`
-            • Author: ${{ github.actor }}
-            • Run: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
 
       - name: Delete uploaded artifacts
         if: ${{ success() }}
