--- a/.github/workflows/ci-tests.yaml
+++ b/.github/workflows/ci-tests.yaml
@@ -1,12 +1,20 @@
 name: test-cli-artifacts
 
 on:
-  workflow_call: {}
-
-env:
-  APP_NAME: expressor
-  MAIN_CLASS: com.diezam04.expresso.adapters.cli.Cli
-  VERSION: 3.2
+  workflow_call:
+    inputs:
+      app_name:
+        description: Application name
+        required: true
+        type: string
+      main_class:
+        description: CLI main class
+        required: true
+        type: string
+      version:
+        description: Application version
+        required: true
+        type: string
 
 permissions:
   contents: read
@@ -14,6 +22,10 @@ permissions:
 jobs:
   test-rest-jar:
     runs-on: ubuntu-latest
+    env:
+      APP_NAME: ${{ inputs.app_name }}
+      MAIN_CLASS: ${{ inputs.main_class }}
+      VERSION: ${{ inputs.version }}
     steps:
       - uses: actions/checkout@v4
 
@@ -54,6 +66,10 @@ jobs:
 
   test-cli-jar:
     runs-on: ubuntu-latest
+    env:
+      APP_NAME: ${{ inputs.app_name }}
+      MAIN_CLASS: ${{ inputs.main_class }}
+      VERSION: ${{ inputs.version }}
     steps:
       - name: Set up Temurin JDK 24
         uses: actions/setup-java@v4
