--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -1,99 +1,388 @@
-name: CI and CDelivery Orchestrator
+name: CI Pipeline
 
 on:
   push:
     branches: [dev]
 
-permissions:
-  contents: write
-  actions: write
-
 env:
-  APP_NAME: expressor
+  APP_NAME: expresso
   MAIN_CLASS: com.diezam04.expresso.adapters.cli.Cli
   VERSION: 3.2
 
 jobs:
   build:
-    uses: ./.github/workflows/ci-build.yaml
-    with:
-      app_name: ${{ env.APP_NAME }}
-      main_class: ${{ env.MAIN_CLASS }}
-      version: ${{ env.VERSION }}
+    runs-on: ubuntu-latest
+    outputs:
+      cli_jar_name: ${{ steps.prepare.outputs.cli_jar_name }}
+      rest_jar_name: ${{ steps.prepare.outputs.rest_jar_name }}
+      dockerhub_available: ${{ steps.check_docker.outputs.available }}
+    steps:
+      - uses: actions/checkout@v4
 
-  tests:
+      - name: Set up Temurin JDK 24
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: '24'
+          cache: maven
+
+      - name: Build with Maven
+        run: mvn -B -DskipTests package
+
+      - name: Check Docker Hub credentials
+        id: check_docker
+        run: |
+          if [ -n "${DOCKERHUB_USERNAME:-}" ] && [ -n "${DOCKERHUB_TOKEN:-}" ]; then
+            echo "available=true" >> "$GITHUB_OUTPUT"
+          else
+            echo "available=false" >> "$GITHUB_OUTPUT"
+          fi
+
+      - name: Prepare release JARs
+        id: prepare
+        run: |
+          set -euo pipefail
+          CLI_JAR=$(find expresso-cli/target -maxdepth 1 -type f -name '*-shaded.jar' | sort | head -n1)
+          if [ -z "$CLI_JAR" ]; then
+            CLI_JAR=$(find expresso-cli/target -maxdepth 1 -type f -name '*.jar' | sort | head -n1)
+          fi
+          if [ -z "$CLI_JAR" ]; then
+            echo "No CLI jar found under expresso-cli/target" >&2
+            exit 1
+          fi
+          REST_JAR=$(find expresso-rest/target -maxdepth 1 -type f -name '*-shaded.jar' | sort | head -n1)
+          if [ -z "$REST_JAR" ]; then
+            REST_JAR=$(find expresso-rest/target -maxdepth 1 -type f -name '*.jar' | sort | head -n1)
+          fi
+          if [ -z "$REST_JAR" ]; then
+            echo "No REST jar found under expresso-rest/target" >&2
+            exit 1
+          fi
+          RELEASE_CLI="${APP_NAME}-${VERSION}.jar"
+          RELEASE_REST="${APP_NAME}-${VERSION}-rest.jar"
+          cp "$CLI_JAR" "expresso-cli/target/${RELEASE_CLI}"
+          cp "$REST_JAR" "expresso-rest/target/${RELEASE_REST}"
+          echo "cli_jar_name=${RELEASE_CLI}" >> "$GITHUB_OUTPUT"
+          echo "rest_jar_name=${RELEASE_REST}" >> "$GITHUB_OUTPUT"
+
+      - name: Upload CLI jar
+        uses: actions/upload-artifact@v4
+        with:
+          name: "${{ env.APP_NAME }}-${{ env.VERSION }}.jar"
+          path: "expresso-cli/target/${{ steps.prepare.outputs.cli_jar_name }}"
+          if-no-files-found: error
+
+      - name: Upload REST jar
+        uses: actions/upload-artifact@v4
+        with:
+          name: "${{ env.APP_NAME }}-${{ env.VERSION }}-rest.jar"
+          path: "expresso-rest/target/${{ steps.prepare.outputs.rest_jar_name }}"
+          if-no-files-found: error
+
+  test:
     needs: build
-    uses: ./.github/workflows/ci-tests.yaml
-    with:
-      app_name: ${{ env.APP_NAME }}
-      main_class: ${{ env.MAIN_CLASS }}
-      version: ${{ env.VERSION }}
+    runs-on: ubuntu-latest
+    env:
+      CLI_JAR_NAME: ${{ needs.build.outputs.cli_jar_name }}
+      REST_JAR_NAME: ${{ needs.build.outputs.rest_jar_name }}
+    steps:
+      - uses: actions/checkout@v4
 
-  webapp:
-    needs:
-      - build
-      - tests
-    uses: ./.github/workflows/ci-webapp.yaml
-    with:
-      app_name: ${{ env.APP_NAME }}
-      version: ${{ env.VERSION }}
+      - name: Set up Temurin JDK 24
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: '24'
 
-  package-deb:
-    needs:
-      - build
-      - tests
-    uses: ./.github/workflows/ci-package-deb.yaml
-    with:
-      cli_jar_name: ${{ needs.build.outputs.cli_jar_name }}
-      app_name: ${{ env.APP_NAME }}
-      main_class: ${{ env.MAIN_CLASS }}
-      version: ${{ env.VERSION }}
+      - name: Download REST jar
+        uses: actions/download-artifact@v4
+        with:
+          name: "${{ env.APP_NAME }}-${{ env.VERSION }}-rest.jar"
+          path: rest
 
-  package-msi:
-    needs:
-      - build
-      - tests
-    uses: ./.github/workflows/ci-package-msi.yaml
-    with:
-      cli_jar_name: ${{ needs.build.outputs.cli_jar_name }}
-      app_name: ${{ env.APP_NAME }}
-      main_class: ${{ env.MAIN_CLASS }}
-      version: ${{ env.VERSION }}
+      - name: Validate REST health endpoint
+        run: |
+          set -euo pipefail
+          REST_JAR=$(find rest -maxdepth 1 -name '*.jar' -print -quit)
+          echo "Launching $REST_JAR"
+          export SERVER_PORT=8081
+          java -jar "$REST_JAR" >/tmp/rest.log 2>&1 &
+          cleanup() {
+            kill %1 >/dev/null 2>&1 || true
+            wait %1 >/dev/null 2>&1 || true
+            cat /tmp/rest.log || true
+          }
+          trap cleanup INT TERM EXIT
+          for _ in $(seq 1 30); do
+            if curl -sSf http://127.0.0.1:8081/api/v1/health | grep -q 'ok'; then
+              echo "REST healthcheck passed"
+              exit 0
+            fi
+            sleep 2
+          done
+          echo "REST healthcheck failed" >&2
+          exit 1
 
-  package-exe:
-    needs:
-      - build
-      - tests
-    uses: ./.github/workflows/ci-package-exe.yaml
-    with:
-      cli_jar_name: ${{ needs.build.outputs.cli_jar_name }}
-      app_name: ${{ env.APP_NAME }}
-      main_class: ${{ env.MAIN_CLASS }}
-      version: ${{ env.VERSION }}
+      - name: Download CLI jar
+        uses: actions/download-artifact@v4
+        with:
+          name: "${{ env.APP_NAME }}-${{ env.VERSION }}.jar"
+          path: cli
 
-  release:
-    needs:
-      - build
-      - tests
-      - webapp
-      - package-deb
-      - package-msi
-      - package-exe
-    uses: ./.github/workflows/ci-release.yaml
-    with:
-      dockerhub_available: ${{ needs.build.outputs.dockerhub_available }}
-      app_name: ${{ env.APP_NAME }}
-      main_class: ${{ env.MAIN_CLASS }}
-      version: ${{ env.VERSION }}
-      release_ref: ${{ github.ref_name }}
+      - name: Smoke test CLI jar
+        run: |
+          set -euo pipefail
+          CLI_JAR=$(find cli -maxdepth 1 -name '*.jar' -print -quit)
+          echo "Testing $CLI_JAR"
+          java -jar "$CLI_JAR" --help
+          mkdir -p output
+          java -jar "$CLI_JAR" transpile examples/HelloWorld0.expresso --out output --verbose
+          java -jar "$CLI_JAR" build examples/HelloWorld0.expresso --out output --verbose
+          java -jar "$CLI_JAR" run examples/HelloWorld0.expresso --out output --verbose
 
-  notify:
-    needs: release
-    if: always()
-    uses: ./.github/workflows/ci-discord.yaml
-    with:
-      status: ${{ needs.release.result }}
-      release_url: ${{ needs.release.outputs.release_url }}
-      app_name: ${{ env.APP_NAME }}
-      version: ${{ env.VERSION }}
-      ref_name: ${{ github.ref_name }}
+  windows_packages:
+    needs: test
+    runs-on: windows-latest
+    env:
+      CLI_JAR_NAME: ${{ needs.build.outputs.cli_jar_name }}
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Temurin JDK 24
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: '24'
+
+      - name: Install WiX
+        shell: powershell
+        run: choco install wixtoolset -y
+
+      - name: Download CLI jar
+        uses: actions/download-artifact@v4
+        with:
+          name: "${{ env.APP_NAME }}-${{ env.VERSION }}.jar"
+          path: target
+
+      - name: Build MSI installer
+        shell: powershell
+        run: |
+          New-Item -ItemType Directory -Force -Path dist | Out-Null
+          jpackage `
+            --type msi `
+            --name "$env:APP_NAME" `
+            --input target `
+            --main-jar "$env:CLI_JAR_NAME" `
+            --main-class "$env:MAIN_CLASS" `
+            --dest dist `
+            --app-version "$env:VERSION" `
+            --vendor "Expresso Team" `
+            --win-console `
+            --win-menu `
+            --win-menu-group "Expresso" `
+            --icon "$env:GITHUB_WORKSPACE\assets\icon.png" `
+            --win-dir-chooser
+
+      - name: Upload MSI
+        uses: actions/upload-artifact@v4
+        with:
+          name: "${{ env.APP_NAME }}-${{ env.VERSION }}.msi"
+          path: dist/*.msi
+          if-no-files-found: error
+
+      - name: Verify MSI install
+        shell: powershell
+        run: |
+          $msi = Get-ChildItem -Path dist -Filter *.msi | Select-Object -First 1
+          if(-not $msi){ throw "MSI not found" }
+          Start-Process -FilePath msiexec.exe -ArgumentList '/i', $msi.FullName, '/qn', '/norestart' -Wait -NoNewWindow
+          Start-Process -FilePath cmd.exe -ArgumentList '/c', '${env:APP_NAME} --version' -Wait -NoNewWindow
+          Start-Process -FilePath msiexec.exe -ArgumentList '/x', $msi.FullName, '/qn', '/norestart' -Wait -NoNewWindow
+
+      - name: Build portable EXE
+        shell: powershell
+        run: |
+          jpackage `
+            --type exe `
+            --name "$env:APP_NAME" `
+            --input target `
+            --main-jar "$env:CLI_JAR_NAME" `
+            --main-class "$env:MAIN_CLASS" `
+            --dest dist `
+            --app-version "$env:VERSION" `
+            --vendor "Expresso Team" `
+            --win-console `
+            --win-menu `
+            --win-menu-group "Expresso" `
+            --icon "$env:GITHUB_WORKSPACE\assets\icon.png" `
+            --win-dir-chooser
+
+      - name: Upload EXE
+        uses: actions/upload-artifact@v4
+        with:
+          name: "${{ env.APP_NAME }}-${{ env.VERSION }}.exe"
+          path: dist/*.exe
+          if-no-files-found: error
+
+      - name: Verify portable EXE
+        shell: powershell
+        run: |
+          $exe = Get-ChildItem -Path dist -Filter *.exe | Select-Object -First 1
+          if(-not $exe){ throw "Portable EXE not found" }
+          Push-Location $exe.DirectoryName
+          try {
+            Start-Process -FilePath cmd.exe -ArgumentList '/c', '${env:APP_NAME} --version' -Wait -NoNewWindow
+          } finally {
+            Pop-Location
+          }
+
+  deb_package:
+    needs: test
+    runs-on: ubuntu-latest
+    env:
+      CLI_JAR_NAME: ${{ needs.build.outputs.cli_jar_name }}
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Temurin JDK 24
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: '24'
+
+      - name: Prepare target directory
+        run: mkdir -p target
+
+      - name: Download CLI jar
+        uses: actions/download-artifact@v4
+        with:
+          name: "${{ env.APP_NAME }}-${{ env.VERSION }}.jar"
+          path: target
+
+      - name: Write Debian maintainer scripts
+        run: |
+          mkdir -p packaging
+          cat > packaging/postinst <<EOF
+          #!/bin/sh
+          set -e
+          ln -sf /opt/${APP_NAME}/bin/${APP_NAME} /usr/local/bin/${APP_NAME}
+          exit 0
+          EOF
+          cat > packaging/postrm <<EOF
+          #!/bin/sh
+          set -e
+          rm -f /usr/local/bin/${APP_NAME}
+          exit 0
+          EOF
+          chmod 755 packaging/postinst packaging/postrm
+
+      - name: Build Debian package
+        run: |
+          set -euo pipefail
+          mkdir -p dist
+          jpackage \
+            --type deb \
+            --name "${APP_NAME}" \
+            --linux-package-name "${APP_NAME}" \
+            --input target \
+            --main-jar "${CLI_JAR_NAME}" \
+            --main-class "${MAIN_CLASS}" \
+            --app-version "${VERSION}" \
+            --linux-deb-maintainer "Expresso Team <antony-08@hotmail.com>" \
+            --resource-dir packaging \
+            --dest dist \
+            --verbose
+          mv dist/*.deb "dist/${APP_NAME}-cli-${VERSION}.deb"
+
+      - name: Upload Debian package
+        uses: actions/upload-artifact@v4
+        with:
+          name: "${{ env.APP_NAME }}-cli-${{ env.VERSION }}.deb"
+          path: dist/*.deb
+          if-no-files-found: error
+
+      - name: Install and verify Debian package
+        run: |
+          set -euo pipefail
+          DEB_FILE=$(find dist -maxdepth 1 -name '*.deb' -print -quit)
+          sudo dpkg -i "$DEB_FILE" || (sudo apt-get update && sudo apt-get -f -y install && sudo dpkg -i "$DEB_FILE")
+          if command -v "${APP_NAME}" >/dev/null 2>&1; then
+            BIN="$(command -v "${APP_NAME}")"
+          elif [ -x "/opt/${APP_NAME}/bin/${APP_NAME}" ]; then
+            BIN="/opt/${APP_NAME}/bin/${APP_NAME}"
+          else
+            dpkg -L "${APP_NAME}" >&2 || true
+            echo "ERROR: Could not locate launcher for ${APP_NAME}" >&2
+            exit 1
+          fi
+          "$BIN" --help
+          sudo dpkg -r "${APP_NAME}"
+
+  docker_image:
+    needs: test
+    runs-on: ubuntu-latest
+    env:
+      REST_JAR_NAME: ${{ needs.build.outputs.rest_jar_name }}
+      DOCKERHUB_AVAILABLE: ${{ needs.build.outputs.dockerhub_available }}
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Download REST jar
+        uses: actions/download-artifact@v4
+        with:
+          name: "${{ env.APP_NAME }}-${{ env.VERSION }}-rest.jar"
+          path: artifacts
+
+      - name: Build Docker image
+        run: |
+          set -euo pipefail
+          REST_JAR=$(find artifacts -maxdepth 1 -name "${REST_JAR_NAME}" -print -quit)
+          if [ -z "$REST_JAR" ]; then
+            echo "REST jar not found" >&2
+            exit 1
+          fi
+          mkdir -p expresso-rest/target
+          cp "$REST_JAR" expresso-rest/target/
+          docker build -f dockerfile -t ${APP_NAME}-rest:${VERSION} .
+
+      - name: Smoke test Docker image
+        run: |
+          set -euo pipefail
+          IMAGE="${APP_NAME}-rest:${VERSION}"
+          CONTAINER="rest-smoke-${GITHUB_RUN_NUMBER}"
+          docker run --rm -d --name "$CONTAINER" -e SERVER_PORT=8082 -p 8082:8082 "$IMAGE"
+          cleanup() {
+            docker logs "$CONTAINER" || true
+            docker stop "$CONTAINER" >/dev/null 2>&1 || true
+          }
+          trap cleanup EXIT
+          for _ in $(seq 1 30); do
+            if curl -sSf http://127.0.0.1:8082/api/v1/health | grep -q 'ok'; then
+              echo "Dockerized REST healthcheck passed"
+              exit 0
+            fi
+            sleep 2
+          done
+          echo "Dockerized REST API failed healthcheck" >&2
+          exit 1
+
+      - name: Docker Hub login
+        if: env.DOCKERHUB_AVAILABLE == 'true'
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Push Docker image
+        if: env.DOCKERHUB_AVAILABLE == 'true'
+        run: |
+          set -euo pipefail
+          IMAGE="${APP_NAME}-rest:${VERSION}"
+          REPO="${{ secrets.DOCKERHUB_USERNAME }}/${APP_NAME}-rest"
+          SHORT_SHA="${GITHUB_SHA::7}"
+          docker tag "$IMAGE" "$REPO:${VERSION}"
+          docker tag "$IMAGE" "$REPO:latest"
+          docker tag "$IMAGE" "$REPO:${SHORT_SHA}"
+          docker push "$REPO:${VERSION}"
+          docker push "$REPO:latest"
+          docker push "$REPO:${SHORT_SHA}"
