--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -6,7 +6,8 @@ on:
 
 env:
   APP_NAME: expresso
-  MAIN_CLASS: com.diezam04.expresso.adapters.cli.Cli
+  MAIN_CLI_CLASS: com.diezam04.expresso.adapters.cli.Cli
+  MAIN_REST_CLASS: com.diezam04.expresso.adapters.rest.RestApi
   VERSION: 3.2
 
 jobs:
@@ -80,7 +81,7 @@ jobs:
           if-no-files-found: error
 
   test:
-    needs: build
+    needs: [build, docker_image]
     runs-on: ubuntu-latest
     env:
       CLI_JAR_NAME: ${{ needs.build.outputs.cli_jar_name }}
@@ -141,7 +142,7 @@ jobs:
           java -jar "$CLI_JAR" run examples/HelloWorld0.expresso --out output --verbose
 
   windows_packages:
-    needs: test
+    needs: [build, test]
     runs-on: windows-latest
     env:
       CLI_JAR_NAME: ${{ needs.build.outputs.cli_jar_name }}
@@ -173,7 +174,7 @@ jobs:
             --name "$env:APP_NAME" `
             --input target `
             --main-jar "$env:CLI_JAR_NAME" `
-            --main-class "$env:MAIN_CLASS" `
+            --main-class "$env:MAIN_CLI_CLASS" `
             --dest dist `
             --app-version "$env:VERSION" `
             --vendor "Expresso Team" `
@@ -207,7 +208,7 @@ jobs:
             --name "$env:APP_NAME" `
             --input target `
             --main-jar "$env:CLI_JAR_NAME" `
-            --main-class "$env:MAIN_CLASS" `
+            --main-class "$env:MAIN_CLI_CLASS" `
             --dest dist `
             --app-version "$env:VERSION" `
             --vendor "Expresso Team" `
@@ -237,7 +238,7 @@ jobs:
           }
 
   deb_package:
-    needs: test
+    needs: [build, test]
     runs-on: ubuntu-latest
     env:
       CLI_JAR_NAME: ${{ needs.build.outputs.cli_jar_name }}
@@ -286,7 +287,7 @@ jobs:
             --linux-package-name "${APP_NAME}" \
             --input target \
             --main-jar "${CLI_JAR_NAME}" \
-            --main-class "${MAIN_CLASS}" \
+            --main-class "${MAIN_CLI_CLASS}" \
             --app-version "${VERSION}" \
             --linux-deb-maintainer "Expresso Team <antony-08@hotmail.com>" \
             --resource-dir packaging \
@@ -319,7 +320,7 @@ jobs:
           sudo dpkg -r "${APP_NAME}"
 
   docker_image:
-    needs: test
+    needs: build
     runs-on: ubuntu-latest
     env:
       REST_JAR_NAME: ${{ needs.build.outputs.rest_jar_name }}
@@ -336,7 +337,7 @@ jobs:
       - name: Build Docker image
         run: |
           set -euo pipefail
-          REST_JAR=$(find artifacts -maxdepth 1 -name "${REST_JAR_NAME}" -print -quit)
+          REST_JAR=$(find artifacts -maxdepth 1 -name "*-rest.jar" -print -quit)
           if [ -z "$REST_JAR" ]; then
             echo "REST jar not found" >&2
             exit 1
@@ -344,27 +345,6 @@ jobs:
           mkdir -p expresso-rest/target
           cp "$REST_JAR" expresso-rest/target/
           docker build -f dockerfile -t ${APP_NAME}-rest:${VERSION} .
-
-      - name: Smoke test Docker image
-        run: |
-          set -euo pipefail
-          IMAGE="${APP_NAME}-rest:${VERSION}"
-          CONTAINER="rest-smoke-${GITHUB_RUN_NUMBER}"
-          docker run --rm -d --name "$CONTAINER" -e SERVER_PORT=8082 -p 8082:8082 "$IMAGE"
-          cleanup() {
-            docker logs "$CONTAINER" || true
-            docker stop "$CONTAINER" >/dev/null 2>&1 || true
-          }
-          trap cleanup EXIT
-          for _ in $(seq 1 30); do
-            if curl -sSf http://127.0.0.1:8082/api/v1/health | grep -q 'ok'; then
-              echo "Dockerized REST healthcheck passed"
-              exit 0
-            fi
-            sleep 2
-          done
-          echo "Dockerized REST API failed healthcheck" >&2
-          exit 1
 
       - name: Docker Hub login
         if: env.DOCKERHUB_AVAILABLE == 'true'
@@ -377,12 +357,7 @@ jobs:
         if: env.DOCKERHUB_AVAILABLE == 'true'
         run: |
           set -euo pipefail
-          IMAGE="${APP_NAME}-rest:${VERSION}"
-          REPO="${{ secrets.DOCKERHUB_USERNAME }}/${APP_NAME}-rest"
-          SHORT_SHA="${GITHUB_SHA::7}"
-          docker tag "$IMAGE" "$REPO:${VERSION}"
+          IMAGE="${APP_NAME}:${VERSION}"
+          REPO="${{ secrets.DOCKERHUB_USERNAME }}/${APP_NAME}"
           docker tag "$IMAGE" "$REPO:latest"
-          docker tag "$IMAGE" "$REPO:${SHORT_SHA}"
-          docker push "$REPO:${VERSION}"
           docker push "$REPO:latest"
-          docker push "$REPO:${SHORT_SHA}"
