--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -81,7 +81,7 @@ jobs:
           if-no-files-found: error
 
   test:
-    needs: [build, docker_image]
+    needs: [build]
     runs-on: ubuntu-latest
     env:
       CLI_JAR_NAME: ${{ needs.build.outputs.cli_jar_name }}
