--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -9,6 +9,7 @@ env:
   MAIN_CLI_CLASS: com.diezam04.expresso.adapters.cli.Cli
   MAIN_REST_CLASS: com.diezam04.expresso.adapters.rest.RestApi
   VERSION: 3.2
+  DOCKERHUB_USERNAME: antonyoviedo
 
 jobs:
   build:
@@ -345,18 +346,16 @@ jobs:
           docker build -f dockerfile -t ${APP_NAME}-rest:${VERSION} .
 
       - name: Docker Hub login
-        if: env.DOCKERHUB_AVAILABLE == 'true'
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          username: ${{ env.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Push Docker image
-        if: env.DOCKERHUB_AVAILABLE == 'true'
         run: |
           set -euo pipefail
           IMAGE="${APP_NAME}:${VERSION}"
-          REPO="${{ secrets.DOCKERHUB_USERNAME }}/${APP_NAME}"
+          REPO="${{ env.DOCKERHUB_USERNAME }}/${APP_NAME}"
           docker tag "$IMAGE" "$REPO:latest"
           docker push "$REPO:latest"
 
