--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -12,11 +12,8 @@ env:
   DOCKERHUB_USERNAME: antonyoviedo
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
-    outputs:
-      cli_jar_name: ${{ steps.prepare.outputs.cli_jar_name }}
-      rest_jar_name: ${{ steps.prepare.outputs.rest_jar_name }}
     steps:
       - uses: actions/checkout@v4
 
@@ -41,70 +38,31 @@ jobs:
 
       - name: Prepare release JARs
         id: prepare
+        env:
+          APP_NAME: ${{ env.APP_NAME }}
+          VERSION: ${{ env.VERSION }}
         run: |
           set -euo pipefail
           CLI_JAR=$(find expresso-cli/target -maxdepth 1 -type f -name '*-shaded.jar' | sort | head -n1)
-          if [ -z "$CLI_JAR" ]; then
-            CLI_JAR=$(find expresso-cli/target -maxdepth 1 -type f -name '*.jar' | sort | head -n1)
-          fi
-          if [ -z "$CLI_JAR" ]; then
-            echo "No CLI jar found under expresso-cli/target" >&2
-            exit 1
-          fi
+          [ -z "$CLI_JAR" ] && CLI_JAR=$(find expresso-cli/target -maxdepth 1 -type f -name '*.jar' | sort | head -n1)
+          [ -z "$CLI_JAR" ] && { echo "No CLI jar found under expresso-cli/target" >&2; exit 1; }
+
           REST_JAR=$(find expresso-rest/target -maxdepth 1 -type f -name '*-shaded.jar' | sort | head -n1)
-          if [ -z "$REST_JAR" ]; then
-            REST_JAR=$(find expresso-rest/target -maxdepth 1 -type f -name '*.jar' | sort | head -n1)
-          fi
-          if [ -z "$REST_JAR" ]; then
-            echo "No REST jar found under expresso-rest/target" >&2
-            exit 1
-          fi
+          [ -z "$REST_JAR" ] && REST_JAR=$(find expresso-rest/target -maxdepth 1 -type f -name '*.jar' | sort | head -n1)
+          [ -z "$REST_JAR" ] && { echo "No REST jar found under expresso-rest/target" >&2; exit 1; }
+
           RELEASE_CLI="${APP_NAME}-${VERSION}.jar"
           RELEASE_REST="${APP_NAME}-${VERSION}-rest.jar"
           cp "$CLI_JAR" "expresso-cli/target/${RELEASE_CLI}"
           cp "$REST_JAR" "expresso-rest/target/${RELEASE_REST}"
-          echo "cli_jar_name=${RELEASE_CLI}" >> "$GITHUB_OUTPUT"
-          echo "rest_jar_name=${RELEASE_REST}" >> "$GITHUB_OUTPUT"
 
-      - name: Upload CLI jar
-        uses: actions/upload-artifact@v4
-        with:
-          name: "${{ env.APP_NAME }}-${{ env.VERSION }}-cli.jar"
-          path: "expresso-cli/target/${{ steps.prepare.outputs.cli_jar_name }}"
-          if-no-files-found: error
-
-      - name: Upload REST jar
-        uses: actions/upload-artifact@v4
-        with:
-          name: "${{ env.APP_NAME }}-${{ env.VERSION }}-rest.jar"
-          path: "expresso-rest/target/${{ steps.prepare.outputs.rest_jar_name }}"
-          if-no-files-found: error
-
-  test:
-    needs: [build]
-    runs-on: ubuntu-latest
-    env:
-      CLI_JAR_NAME: ${{ needs.build.outputs.cli_jar_name }}
-      REST_JAR_NAME: ${{ needs.build.outputs.rest_jar_name }}
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Temurin JDK 24
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: '24'
-
-      - name: Download REST jar
-        uses: actions/download-artifact@v4
-        with:
-          name: "${{ env.APP_NAME }}-${{ env.VERSION }}-rest.jar"
-          path: rest
+          echo "cli_path=expresso-cli/target/${RELEASE_CLI}" >> "$GITHUB_OUTPUT"
+          echo "rest_path=expresso-rest/target/${RELEASE_REST}" >> "$GITHUB_OUTPUT"
 
       - name: Validate REST health endpoint
         run: |
           set -euo pipefail
-          REST_JAR=$(find rest -maxdepth 1 -name '*.jar' -print -quit)
+          REST_JAR="${{ steps.prepare.outputs.rest_path }}"
           echo "Launching $REST_JAR"
           export SERVER_PORT=8081
           java -jar "$REST_JAR" >/tmp/rest.log 2>&1 &
@@ -124,25 +82,33 @@ jobs:
           echo "REST healthcheck failed" >&2
           exit 1
 
-      - name: Download CLI jar
-        uses: actions/download-artifact@v4
-        with:
-          name: "${{ env.APP_NAME }}-${{ env.VERSION }}-cli.jar"
-          path: cli
-
       - name: Smoke test CLI jar
         run: |
           set -euo pipefail
-          CLI_JAR=$(find cli -maxdepth 1 -name '*.jar' -print -quit)
+          CLI_JAR="${{ steps.prepare.outputs.cli_path }}"
           echo "Testing $CLI_JAR"
           java -jar "$CLI_JAR" --help
           mkdir -p output
           java -jar "$CLI_JAR" transpile examples/HelloWorld0.expresso --out output --verbose
-          java -jar "$CLI_JAR" build examples/HelloWorld0.expresso --out output --verbose
-          java -jar "$CLI_JAR" run examples/HelloWorld0.expresso --out output --verbose
+          java -jar "$CLI_JAR" build     examples/HelloWorld0.expresso --out output --verbose
+          java -jar "$CLI_JAR" run       examples/HelloWorld0.expresso --out output --verbose
+
+      - name: Upload CLI jar
+        uses: actions/upload-artifact@v4
+        with:
+          name: "${{ env.APP_NAME }}-${{ env.VERSION }}-cli.jar"
+          path: "${{ steps.prepare.outputs.cli_path }}"
+          if-no-files-found: error
+
+      - name: Upload REST jar
+        uses: actions/upload-artifact@v4
+        with:
+          name: "${{ env.APP_NAME }}-${{ env.VERSION }}-rest.jar"
+          path: "${{ steps.prepare.outputs.rest_path }}"
+          if-no-files-found: error
 
   windows_packages:
-    needs: [build, test]
+    needs: [build-and-test]
     runs-on: windows-latest
     env:
       CLI_JAR_NAME: ${{ needs.build.outputs.cli_jar_name }}
@@ -238,7 +204,7 @@ jobs:
           }
 
   deb_package:
-    needs: [build, test]
+    needs: [build-and-test]
     runs-on: ubuntu-latest
     env:
       CLI_JAR_NAME: ${{ needs.build.outputs.cli_jar_name }}
@@ -320,7 +286,7 @@ jobs:
           sudo dpkg -r "${APP_NAME}"
 
   docker_image:
-    needs: [build, test]
+    needs: [build-and-test]
     runs-on: ubuntu-latest
     env:
       REST_JAR_NAME: ${{ needs.build.outputs.rest_jar_name }}
