--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -394,7 +394,7 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-          REPO="${{ env.DOCKERHUB_USERNAME }}/${APP_NAME}"
+          REPO="${{ env.DOCKERHUB_USERNAME }}/${APP_NAME}-rest"
           docker push "$REPO:latest"
 
       - name: Create GitHub release
