--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -151,7 +151,7 @@ jobs:
             --win-console `
             --win-menu `
             --win-menu-group "Expresso" `
-            --icon "$env:GITHUB_WORKSPACE\assets\icon.png" `
+            --icon "$env:GITHUB_WORKSPACE\assets\icon.ico" `
             --win-dir-chooser
 
       - name: Upload MSI
@@ -185,7 +185,7 @@ jobs:
             --win-console `
             --win-menu `
             --win-menu-group "Expresso" `
-            --icon "$env:GITHUB_WORKSPACE\assets\icon.png" `
+            --icon "$env:GITHUB_WORKSPACE\assets\icon.ico" `
             --win-dir-chooser
 
       - name: Upload EXE
@@ -258,6 +258,7 @@ jobs:
             --main-class "${MAIN_CLI_CLASS}" \
             --app-version "${VERSION}" \
             --linux-deb-maintainer "Expresso Team <antony-08@hotmail.com>" \
+            --icon "assets/icon.png" \
             --resource-dir packaging \
             --dest dist \
             --verbose
