--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ expresso-cli/target/*
 expresso-cli/target/expresso-cli-0.1.0.jar
 expresso-cli/target/expresso-cli-0.1.0.jar
 expresso-cli/target/original-expresso-cli-0.1.0.jar
+.github/workflows/a.yaml
